[docs-generation] feat: Первая версия
