# core-service/internal/app/core-service/api/template/service.go
@@ -16,9 +16,9 @@ type Service struct {
 }
 
 type TemplateService interface {
-	CreateTemplate(ctx context.Context, organizationID domain.ID, name, description, templateType, fieldsSchema, contentTemplate string) (domain.ContractTemplate, error)
+	CreateTemplate(ctx context.Context, organizationID domain.ID, name, description, templateType, fieldsSchema, contentTemplate, s3TemplateKey string) (domain.ContractTemplate, error)
 	GetTemplate(ctx context.Context, id domain.ID) (domain.ContractTemplate, error)
-	UpdateTemplate(ctx context.Context, id domain.ID, name, description, fieldsSchema, contentTemplate *string) (domain.ContractTemplate, error)
+	UpdateTemplate(ctx context.Context, id domain.ID, name, description, fieldsSchema, contentTemplate, s3TemplateKey *string) (domain.ContractTemplate, error)
 	DeleteTemplate(ctx context.Context, id domain.ID) error
 	ListTemplatesByOrganization(ctx context.Context, organizationID domain.ID) ([]domain.ContractTemplate, error)
 }
@@ -38,6 +38,7 @@ func templateToProto(template domain.ContractTemplate) *pb.ContractTemplate {
 		TemplateType:    template.TemplateType,
 		FieldsSchema:    template.FieldsSchema,
 		ContentTemplate: template.ContentTemplate,
+		S3TemplateKey:   template.S3TemplateKey,
 		CreatedAt:       timestamppb.New(template.CreatedAt),
 		UpdatedAt:       timestamppb.New(template.UpdatedAt),
 	}
@@ -52,7 +53,7 @@ func (s *Service) CreateContractTemplate(ctx context.Context, req *pb.CreateTemp
 		return nil, domain.ErrInvalidArgument
 	}
 
-	template, err := s.templateService.CreateTemplate(ctx, orgID, req.Name, req.Description, req.TemplateType, req.FieldsSchema, req.ContentTemplate)
+	template, err := s.templateService.CreateTemplate(ctx, orgID, req.Name, req.Description, req.TemplateType, req.FieldsSchema, req.ContentTemplate, req.S3TemplateKey)
 	if err != nil {
 		return nil, err
 	}
@@ -90,7 +91,7 @@ func (s *Service) UpdateContractTemplate(ctx context.Context, req *pb.UpdateTemp
 		return nil, domain.ErrInvalidArgument
 	}
 
-	template, err := s.templateService.UpdateTemplate(ctx, id, req.Name, req.Description, req.FieldsSchema, req.ContentTemplate)
+	template, err := s.templateService.UpdateTemplate(ctx, id, req.Name, req.Description, req.FieldsSchema, req.ContentTemplate, req.S3TemplateKey)
 	if err != nil {
 		return nil, err
 	}
